--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -73,5 +73,5 @@ jobs:
       id: build
       run: |
         mv config .config
-        ./set_make
+        sudo ./set_make
         echo "::set-output name=status::success"
